fixes spacing issue in modal

--- a/src/assets/styles/unavailable.css
+++ b/src/assets/styles/unavailable.css
@@ -1,3 +1,8 @@
+.unavailable-container {
+  display: flex;
+  justify-content: center;
+}
+
 .unavailable {
   display: flex;
   align-items: center;
